--- a/src/css/app.component.scss
+++ b/src/css/app.component.scss
@@ -1,4 +1,6 @@
- .app-component {
+@import 'src/css/mixins';
+
+.app-component {
     position: absolute;
     left: 0;
     top: 0;
@@ -9,7 +11,7 @@
     background-color: #171C28;
   }
 
-  .app-component__navbar {
+.app-component__navbar {
     width: 100%;
     height: 16.5%;
   }
@@ -27,21 +29,24 @@
     line-height: 53px;
     text-align: center;
     color: #FFFFFF;
-
   }
 
   .app-component__navbar-buttons {
-    width: 100%;
-    font-size: 27px;
-    height: 16.5%;
-    color: #FFFFFF;
-    display: flex;
-    position: absolute;
-    box-sizing: border-box;
-    justify-content: flex-end;
-    padding-right: 6.25%;
-    padding-top: 63px;
-    font-family: "Montserrat", serif;
+    display: none;
+
+    @include desktop {
+      width: 100%;
+      font-size: 27px;
+      height: 16.5%;
+      color: #FFFFFF;
+      display: flex;
+      position: absolute;
+      box-sizing: border-box;
+      justify-content: flex-end;
+      padding-right: 6.25%;
+      padding-top: 63px;
+      font-family: "Montserrat", serif;
+    }
   }
 
   .button {
@@ -55,27 +60,53 @@
 
   .app-component__main {
     display: flex;
-    margin: 82px auto 32px;
+    margin: 200px auto 32px;
     padding: 0 16px;
-    flex-direction: row;
+    flex-direction: column-reverse;
     justify-content: space-between;
     align-items: center;
     font-family: "Montserrat", serif;
     color: #FFFFFF;
+
+    @include desktop {
+      display: flex;
+      margin: 82px auto 32px;
+      padding: 0 16px;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      font-family: "Montserrat", serif;
+      color: #FFFFFF;
+    }
   }
 
   .app-component__welcome {
-    font-size: 70px;
+    font-size: 30px;
     padding-bottom: 30px;
+    display: flex;
+    justify-content: center;
+
+    @include desktop {
+      font-size: 70px;
+      padding-bottom: 30px;
+    }
   }
 
   .app-component__content {
-    margin-top: 12%;
-    margin-left: 55px;
+    margin-top: 4%;
+
+    @include desktop {
+      margin-top: 12%;
+      margin-left: 55px;
+    }
   }
 
   .app-component__description {
-    font-size: 30px;
+    font-size: 20px;
+
+    @include desktop {
+      font-size: 30px;
+    }
   }
 
   .app-component__social-icons {
@@ -99,8 +130,13 @@
 
   .app-component__photo {
     border-radius: 500px;
-    width: 349px;
-    margin-right: 90px;
+    width: 200px;
+
+    @include desktop {
+      border-radius: 500px;
+      width: 349px;
+      margin-right: 90px;
+    }
   }
 
   .app-component__skills {
