--- a/src/css/app.component.scss
+++ b/src/css/app.component.scss
@@ -94,18 +94,25 @@
 
   .app-component__content {
     margin-top: 4%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
     @include desktop {
       margin-top: 12%;
       margin-left: 55px;
+      display: flex;
+      align-items: flex-start;
     }
   }
 
   .app-component__description {
     font-size: 20px;
+    text-align: center;
 
     @include desktop {
       font-size: 30px;
+      text-align: left;
     }
   }
 
@@ -142,7 +149,16 @@
   .app-component__skills {
     margin-top: 20%;
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+
+    @include desktop {
+      margin-top: 20%;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      align-items: flex-start;
+    }
   }
 
   .app-component__skills-right {
@@ -187,6 +203,13 @@
     margin-top: 20%;
     display: flex;
     flex-direction: column;
+    align-items: center;
+
+    @include desktop {
+      margin-top: 20%;
+      display: flex;
+      flex-direction: column;
+    }
   }
 
   .app-component__projects-title {
@@ -199,8 +222,15 @@
   .app-component__projects-container {
     margin-top: 75px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-around;
+
+    @include desktop {
+      margin-top: 75px;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+    }
   }
 
   .app-component__projects-container-app {
@@ -242,15 +272,25 @@
 
   .app-component__education {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-around;
     margin-top: 20%;
+    margin-left: 70px;
+
+    @include desktop {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      margin-top: 20%;
+      margin-left: 0px;
+    }
   }
 
   .app-component__education-title {
     font-size: 64px;
     color: #FFFFFF;
     font-family: "Montserrat", serif;
+    margin-top: 20px;
   }
 
   .app-component__education-image {
@@ -281,10 +321,20 @@
 
   .app-component__contact {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    align-items: center;
     justify-content: space-around;
     margin-top: 20%;
     margin-bottom: 15%;
+
+    @include desktop {
+      display: flex;
+      flex-direction: row;
+      align-items: flex-start;
+      justify-content: space-around;
+      margin-top: 20%;
+      margin-bottom: 15%;
+    }
   }
 
   .app-component__contact-title {
@@ -314,7 +364,12 @@
   }
 
   .app-component__contact-end {
-    width: 350px;
-    margin-top: 5%;
+    display: none;
+
+    @include desktop {
+      width: 350px;
+      margin-top: 5%;
+      display: flex;
+    }
   }
 
