--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,41 +13,41 @@
       <div class="app-component__content">
         <div class="app-component__welcome">Hi all, I'm Michał 👋</div>
         <p class="app-component__description">A passionate Frontend Developer 🚀 having
-          <br> an experience of building Web applications
-          <br> with TypeScript / Angular / Sass  and some
-          <br> other cool libraries and frameworks.</p>
+           an experience of building Web applications
+           with TypeScript / Angular / Sass  and some
+           other cool libraries and frameworks.</p>
         <div>
-          <a href="https://github.com/MichalWolanin"><img src="./assets/icons/github.png" alt="" class="app-component__social-icons"></a>
-          <a href="https://www.linkedin.com/in/michal-wolanin/"><img src="./assets/icons/linkedin.png" alt="" class="app-component__social-icons"></a>
-          <a href="https://twitter.com/michal_wolanin?t=-pw_8aTUKdATqMrR3rTJLA&s=07"><img src="./assets/icons/twitter.png" alt="" class="app-component__social-icons"></a>
-          <a href="https://www.instagram.com/michal_wolanin/"><img src="./assets/icons/instagram.png" alt="" class="app-component__social-icons"></a>
-          <a href="https://www.facebook.com/WolaninMichal"><img src="./assets/icons/facebook.png" alt="" class="app-component__social-icons"></a>
-          <a href="https://open.spotify.com/playlist/6RmUivVQtDWZBzedWJEiQT?si=c2871abacf75409c"><img src="./assets/icons/spotify.png" alt="" class="app-component__social-icons"></a>
+          <a href="https://github.com/MichalWolanin"><img src="./assets/icons/github.png" alt="github" class="app-component__social-icons"></a>
+          <a href="https://www.linkedin.com/in/michal-wolanin/"><img src="./assets/icons/linkedin.png" alt="linkedin" class="app-component__social-icons"></a>
+          <a href="https://twitter.com/michal_wolanin?t=-pw_8aTUKdATqMrR3rTJLA&s=07"><img src="./assets/icons/twitter.png" alt="twitter" class="app-component__social-icons"></a>
+          <a href="https://www.instagram.com/michal_wolanin/"><img src="./assets/icons/instagram.png" alt="instagram" class="app-component__social-icons"></a>
+          <a href="https://www.facebook.com/WolaninMichal"><img src="./assets/icons/facebook.png" alt="facebook" class="app-component__social-icons"></a>
+          <a href="https://open.spotify.com/playlist/6RmUivVQtDWZBzedWJEiQT?si=c2871abacf75409c"><img src="./assets/icons/spotify.png" alt="spotify" class="app-component__social-icons"></a>
         </div>
         <div>
           <button (click)="scroll(contact)" class="app-component__contact-button"> CONTACT ME </button>
         </div>
       </div>
-      <img src="./assets/images/profilowe.jpg" alt="" class="app-component__photo">
+      <img src="./assets/images/profilowe.jpg" alt="profil" class="app-component__photo">
     </div>
     <div class="app-component__skills" #skills>
       <div class="app-component__skills-left">
         <div class="app-component__skills-title">What I do</div>
         <div class="app-component__skills-images">
-          <img src="./assets/icons/html.png" alt="" class="app-component__environments">
-          <img src="./assets/icons/css.png" alt="" class="app-component__environments">
-          <img src="./assets/icons/sass.png" alt="" class="app-component__environments">
-          <img src="./assets/icons/angular.png" alt="" class="app-component__environments">
-          <img src="./assets/icons/js.png" alt="" class="app-component__environments">
-          <img src="./assets/icons/ts.png" alt="" class="app-component__environments">
-          <img src="./assets/icons/wordpress.png" alt="" class="app-component__environments">
-          <img src="./assets/icons/bootstrap.png" alt="" class="app-component__environments">
-          <img src="./assets/icons/jira.png" alt="" class="app-component__environments">
-          <img src="./assets/icons/webstorm.png" alt="" class="app-component__environments">
-          <img src="./assets/icons/git.png" alt="" class="app-component__environments">
-          <img src="./assets/icons/figma.png" alt="" class="app-component__environments">
+          <img src="./assets/icons/html.png" alt="html" class="app-component__environments">
+          <img src="./assets/icons/css.png" alt="css" class="app-component__environments">
+          <img src="./assets/icons/sass.png" alt="sass" class="app-component__environments">
+          <img src="./assets/icons/angular.png" alt="angular" class="app-component__environments">
+          <img src="./assets/icons/js.png" alt="javascript" class="app-component__environments">
+          <img src="./assets/icons/ts.png" alt="typescript" class="app-component__environments">
+          <img src="./assets/icons/wordpress.png" alt="wordpress" class="app-component__environments">
+          <img src="./assets/icons/bootstrap.png" alt="bootstrap" class="app-component__environments">
+          <img src="./assets/icons/jira.png" alt="jira" class="app-component__environments">
+          <img src="./assets/icons/webstorm.png" alt="webstorm" class="app-component__environments">
+          <img src="./assets/icons/git.png" alt="git" class="app-component__environments">
+          <img src="./assets/icons/figma.png" alt="figma" class="app-component__environments">
         </div>
-        <div>
+        <div class="app-component__skills-text-container">
           <p class="app-component__skills-text">🔥 Develop highly interactive Front end / User
             <br> Interfaces for your web applications</p>
           <p class="app-component__skills-text">🔥 Integration of third party services such
@@ -57,8 +57,8 @@
       <div class="app-component__skills-right">
         <div class="app-component__skills-basic">Basic knowledge</div>
         <div class="app-component__skills-basic-images">
-          <img src="./assets/icons/c++.png" alt="" class="app-component__environments">
-          <img src="./assets/icons/spring.png" alt="" class="app-component__environments">
+          <img src="./assets/icons/c++.png" alt="c++" class="app-component__environments">
+          <img src="./assets/icons/spring.png" alt="spring" class="app-component__environments">
         </div>
       </div>
 
@@ -67,12 +67,16 @@
       <div class="app-component__projects-title">Projects</div>
       <div class="app-component__projects-container">
         <div class="app-component__projects-container-app">
-          <img src="./assets/images/szkola.png" class="app-component__projects-container-app-image">
-          <button (click)="firstProject('http://www.psppotokwielki.pl/')" class="app-component__projects-container-app-btn">Visit Website</button>
+          <img src="./assets/images/logo512.png" alt="minutesforspine" class="app-component__projects-container-app-image">
+          <button (click)="firstProject('https://www.5minutesforspine.com/')" class="app-component__projects-container-app-btn">Visit Website</button>
         </div>
         <div class="app-component__projects-container-app">
-          <img src="./assets/images/planes.png" class="app-component__projects-container-app-image">
+          <img src="./assets/images/planes.png" alt="planes" class="app-component__projects-container-app-image">
           <button (click)="secondProject('https://michalwolanin.github.io/planes/login')" class="app-component__projects-container-app-btn">Visit Website</button>
+        </div>
+        <div class="app-component__projects-container-app">
+          <img src="./assets/images/szkola.png" alt="Publiczna Szkoła Podstawowa im. Ofiar Katynia w Potoku Wielkim" class="app-component__projects-container-app-image">
+          <button (click)="secondProject('http://www.psppotokwielki.pl/')" class="app-component__projects-container-app-btn">Visit Website</button>
         </div>
       </div>
     </div>
@@ -80,7 +84,7 @@
     <div class="app-component__education" #education>
       <div>
         <div class="app-component__education-title">Education</div>
-        <img src="./assets/images/kul.png" class="app-component__education-image">
+        <img src="./assets/images/kul.png" alt="Katolicki Uniwersytet Lubelski" class="app-component__education-image">
         <div class="app-component__education-main-text">John Paul II Catholic University of Lublin</div>
         <div class="app-component__education-text">Computer Science</div>
         <div class="app-component__education-text">October 2021 - Currently</div>
@@ -98,12 +102,12 @@
       <div>
         <div class="app-component__contact-title">Contact Me!</div>
           <div class="app-component__contact-location">
-            <div class="app-component__contact-location-place"><img src="./assets/icons/localization.png">Lublin, Poland</div>
+            <div class="app-component__contact-location-place"><img src="./assets/icons/localization.png" alt="lokalizacja">Lublin, Poland</div>
               <div class="app-component__contact-location-images">
-                <a href="https://github.com/MichalWolanin"><img src="./assets/icons/github.png" alt="" class="app-component__social-icons"></a>
-                <a href="https://www.linkedin.com/in/michal-wolanin/"><img src="./assets/icons/linkedin.png" alt="" class="app-component__social-icons"></a>
-                <a href="https://twitter.com/michal_wolanin?t=-pw_8aTUKdATqMrR3rTJLA&s=07"><img src="./assets/icons/twitter.png" alt="" class="app-component__social-icons"></a>
-                <a href="mailto:michalwolanin02@gmail.com"><img src="./assets/icons/gmail.png" alt="" class="app-component__social-icons"></a>
+                <a href="https://github.com/MichalWolanin"><img src="./assets/icons/github.png" alt="github" class="app-component__social-icons"></a>
+                <a href="https://www.linkedin.com/in/michal-wolanin/"><img src="./assets/icons/linkedin.png" alt="linkedin" class="app-component__social-icons"></a>
+                <a href="https://twitter.com/michal_wolanin?t=-pw_8aTUKdATqMrR3rTJLA&s=07"><img src="./assets/icons/twitter.png" alt="twitter" class="app-component__social-icons"></a>
+                <a href="mailto:michalwolanin02@gmail.com"><img src="./assets/icons/gmail.png" alt="gmail" class="app-component__social-icons"></a>
               </div>
           </div>
       </div>
