--- a/src/css/app.component.scss
+++ b/src/css/app.component.scss
@@ -207,10 +207,15 @@
   }
 
   .app-component__skills-left {
-    margin-left: 40px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 400px;
 
     @include desktop {
       margin-left: unset;
+      align-items: unset;
+      width: unset;
     }
   }
 
@@ -383,6 +388,7 @@
       display: flex;
       flex-direction: row;
       justify-content: space-around;
+      width: unset;
       margin-top: 20%;
       margin-left: 0px;
     }
