--- a/src/css/app.component.scss
+++ b/src/css/app.component.scss
@@ -33,7 +33,7 @@
     font-family: 'Vujahday Script', cursive;
     font-style: normal;
     font-weight: normal;
-    font-size: 50px;
+    font-size: 40px;
     line-height: 53px;
     text-align: center;
     color: #FFFFFF;
@@ -82,8 +82,8 @@
 
   .app-component__main {
     display: flex;
-    margin: 200px auto 32px;
-    padding: 0 16px;
+    width: 375px;
+    margin: 200px auto;
     flex-direction: column-reverse;
     justify-content: space-between;
     align-items: center;
@@ -92,8 +92,9 @@
 
     @include desktop {
       display: flex;
+      width: unset;
       margin: 82px auto 32px;
-      padding: 0 16px;
+      padding: unset;
       flex-direction: row;
       justify-content: space-between;
       align-items: center;
@@ -146,7 +147,7 @@
 
   .app-component__social-icons {
     height: 36px;
-    margin-right: 25px;
+    margin-right: 15px;
 
     @include desktop {
       height: 36px;
@@ -210,7 +211,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    width: 400px;
+    width: 375px;
 
     @include desktop {
       margin-left: unset;
@@ -239,7 +240,7 @@
   }
 
   .app-component__skills-text-container {
-    width: 400px;
+    width: 375px;
   }
 
   .app-component__skills-basic {
@@ -249,7 +250,7 @@
   }
 
   .app-component__skills-images {
-    width: 400px;
+    width: 375px;
 
     @include desktop {
       width: 600px;
@@ -318,8 +319,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 400px;
-    height: 450px;
+    width: 375px;
+    height: 425px;
     left: 55px;
     top: 307px;
     margin-bottom: 20px;
