--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -66,7 +66,7 @@
       <div class="app-component__projects-title">Projects</div>
       <div class="app-component__projects-container">
         <div class="app-component__projects-container-app">
-          <img src="./assets/images/logo512.png" alt="minutesforspine" class="app-component__projects-container-app-image">
+          <img src="./assets/images/logo512.png" alt="5minutesforspine" class="app-component__projects-container-app-image">
           <button (click)="firstProject('https://www.5minutesforspine.com/')" class="app-component__projects-container-app-btn">Visit Website</button>
         </div>
         <div class="app-component__projects-container-app">
