--- a/src/css/app.component.scss
+++ b/src/css/app.component.scss
@@ -251,8 +251,8 @@
   }
 
   .app-component__skills-images {
-    width: 375px;
-    margin-left: 50px;
+    width: unset;
+    margin-left: 30px;
 
     @include desktop {
       width: 600px;
