--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
         <div>
           <a href="https://github.com/MichalWolanin"><img src="./assets/icons/github.png" alt="github" class="app-component__social-icons"></a>
           <a href="https://www.linkedin.com/in/michal-wolanin/"><img src="./assets/icons/linkedin.png" alt="linkedin" class="app-component__social-icons"></a>
-          <a href="https://twitter.com/michal_wolanin?t=-pw_8aTUKdATqMrR3rTJLA&s=07"><img src="./assets/icons/twitter.png" alt="twitter" class="app-component__social-icons"></a>
+          <a href="https://twitter.com/Michael_wolanin"><img src="./assets/icons/twitter.png" alt="twitter" class="app-component__social-icons"></a>
           <a href="https://www.instagram.com/michal_wolanin/"><img src="./assets/icons/instagram.png" alt="instagram" class="app-component__social-icons"></a>
           <a href="https://www.facebook.com/WolaninMichal"><img src="./assets/icons/facebook.png" alt="facebook" class="app-component__social-icons"></a>
         </div>
@@ -105,7 +105,7 @@
               <div class="app-component__contact-location-images">
                 <a href="https://github.com/MichalWolanin"><img src="./assets/icons/github.png" alt="github" class="app-component__social-icons"></a>
                 <a href="https://www.linkedin.com/in/michal-wolanin/"><img src="./assets/icons/linkedin.png" alt="linkedin" class="app-component__social-icons"></a>
-                <a href="https://twitter.com/michal_wolanin?t=-pw_8aTUKdATqMrR3rTJLA&s=07"><img src="./assets/icons/twitter.png" alt="twitter" class="app-component__social-icons"></a>
+                <a href="https://twitter.com/Michael_wolanin"><img src="./assets/icons/twitter.png" alt="twitter" class="app-component__social-icons"></a>
                 <a href="mailto:michalwolanin02@gmail.com"><img src="./assets/icons/gmail.png" alt="gmail" class="app-component__social-icons"></a>
               </div>
           </div>
